# tsintegration

./: .gitignore  LICENSE  README.md
lib/: TSIntegration.cpp  TSIntegration.h  TSLogger.h  TSThread.cpp  TSThread.h
lib/android/: AndroidMain.cpp
lib/apple/: TSRendererView.h  TSRendererView.mm
lib/apple/ios/: AppDelegate.h  AppDelegate.mm  main.m
lib/apple/osx/: AppDelegate.h  AppDelegate.mm  main.m
lib/emscripten/: main.cpp
lib/win32/: WinMain.cpp
painter/: Painter.cpp
painter/AndroidStudio/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
painter/AndroidStudio/app/src/main/: AndroidManifest.xml
painter/AndroidStudio/app/src/main/java/com/teaspoon/painter/: FullscreenActivity.java
painter/AndroidStudio/app/src/main/res/layout/: activity_main.xml
painter/AndroidStudio/app/src/main/res/values/: strings.xml
painter/AndroidStudio/gradle/wrapper/: gradle-wrapper.properties
painter/Emscripten/: build.sh
painter/MSVC/: MSVC.sln
painter/MSVC/MSVC/: MSVC.vcxproj
painter/XCode/Painter.xcodeproj/: project.pbxproj
painter/XCode/Painter.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
painter/XCode/Painter.xcodeproj/project.xcworkspace/xcshareddata/: IndoorSoccer.xccheckout  IndoorSoccer.xcscmblueprint  MazeGame.xcscmblueprint
painter/XCode/Painter.xcodeproj/xcshareddata/xcschemes/: PainterIOS.xcscheme  PainterOSX.xcscheme
painter/XCode/PainterIOS/: Info.plist  Launch Screen.storyboard
